* Version 1.3.0 (unreleased)
- Removed duplicate function definition from util.h (#53)
- Increased size of dictionary vendor and values to 32-bits from 16.


* Version 1.2.12 (released 2020-09-11)
- rc_avpair_tostr: return error instead of crashing when time is
  invalid.
- Handle errno=ENETUNREACH and return NETUNREACH_RC.
- Do not use LOG_PERROR if not defined in syslog.h


* Version 1.2.11 (released 2018-09-14)
- rc_read_dictionary_from_buffer: introduced new function; this
  is required to load dictionary attributes from string buffer
  (#24)
- Added non-temporary IPv6 address support (#23). This enables
  radcli to use Global IPv6 address instead of temporary IPv6
  address as source address for packets sent out when IPv6 
  Privacy Extensions are enabled in system.


* Version 1.2.10 (released 2018-05-08)
- rc_send_server_ctx: addressed unaligned access issue on certain
  platforms (#27).
- Added Namespace support (#30). radcli now supports Namespaces on 
  Linux based systems.
- rc_apply_config: introduced new function; this is required to be
  called when no configuration file is set and parameters are set
  individually using calls to rc_add_config().


* Version 1.2.9 (released 2018-01-20)
- rc_avpair_gen: addressed issue that caused all attributes to be
  rejected if the last attribute in the message is a VSA with an unknown
  Vendor-ID or Type.


* Version 1.2.8 (released 2017-07-29)
- rc_random_vector will use gnutls_rnd() to obtain randomness if
  compiled with GnuTLS. This enables the library to not depend
  on specific kernel versions (there are versions of Linux kernel
  which do not provide calls for getentopy libc function).
- Fixed issue when several servers in radiusclient.conf are present.
  The issue caused only the first server to be contacted. Report
  and fix by Martin Belanger.
- No longer divide the timeout when across multiple servers.
  This restores the semantics of radiusclient-ng and freeradius-client